--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 fastapi>=0.68.0
 uvicorn>=0.15.0
-pydantic>=1.8.2
-pytest>=6.2.5
-httpx>=0.23.0
+python-dotenv>=0.19.0
+requests>=2.26.0
+sentence-transformers>=2.2.0
+scikit-learn>=1.0.0
+numpy>=1.21.0
+pydantic>=1.8.0
